<resources>
    <!--    app标题-->
    <string name="app_name">微信80.0</string>
    <!--    导航栏标题-->
    <string name="message">信息</string>
    <string name="friends">音乐</string>
    <string name="contacts">联系人</string>
    <string name="settings">地图</string>
    <!--    界面二级标题-->
    <string name="mesText">这是朋友页面！</string>
    <string name="friBCRText">这是后台音乐播放，上面的按钮点击则后台播放音乐，下面的按钮点击后则停止后台播放音乐！</string>
    <string name="friSAudioText">这是绑定音乐服务播放，点击下面的按钮点击则绑定播放音乐，点击返回按钮则停止绑定播放音乐！</string>
    <string name="friBSAudioText">这是短信提示音乐播放，来短信后播放音乐，点击下面的按钮可以停止短信提示音！</string>

    <string name="friBtSSm">Service Start Music</string>
    <string name="friBtBSSm">Bind Service Start Music</string>
    <string name="friBtSSM">Service Stop Music</string>

    <string name="cttText">这是联系人页面！</string>
    <string name="setText">这是设置页面！</string>
    <!--顶部到导航栏-->
    <string name="content_description_favorite">非常喜欢！</string>
    <string name="favorite">喜欢</string>
    <string name="content_description_search">全面搜索！</string>
    <string name="search">搜索</string>
    <string name="content_description_more">更多功能！</string>
    <string name="more">更多</string>
    <!--    朋友页面唯一按钮-->
    <string name="fri_btn">Stop Music!</string>
    <!--信息页面歌名和歌手-->
    <string name="init_song">Inside the Lines</string>
    <string name="init_singer">Mike Perry</string>
    <!--联系人页面-->
    <!--数据库操作按钮文字-->
    <string name="ctt_add">添加</string>
    <string name="ctt_edit">修改</string>
    <string name="ctt_quary">查询</string>
    <string name="ctt_del">删除</string>
    <!--数据库列表表头-->
    <string name="ctt_num">序号</string>
    <string name="ctt_name">姓名</string>
    <string name="ctt_tel">电话</string>
    <!--地图定位-->
    <string name="set_Lat">纬度</string>
    <string name="set_Lon">经度</string>
    <string name="set_Add">地址</string>
    <string name="set_Dsc">描述</string>
    <string name="set_Drt">方向</string>
    <string name="set_Rds">半径</string>

    <!--网络登录页-->
    <string name="net_Title">欢迎登陆小米商城后台管理系统</string>
    <string name="net_UserName">用户名</string>
    <string name="net_RealUserName">admin</string>
    <string name="net_PassWard">密码</string>
    <string name="net_RealPassWard">123456</string>
    <string name="net_LoginButton">立即登录</string>

    <string name="net_Succ_Title">小米商城商品查询云计算平台</string>
    <string name="net_Succ_GoodsIdRangeFrontMes">商品ID范围：正在查询</string>
    <string name="net_Succ_GoodsId">商品ID</string>
    <string name="net_Succ_GoodsSearch">搜索商品</string>
    <string name="net_Succ_GoodsName">商品名</string>
    <string name="net_Succ_GoodsType">商品类别</string>
    <string name="net_Succ_GoodsPrice">商品价格</string>
    <string name="net_Succ_GoodsNum">商品库存</string>
    <string name="net_Succ_GoodsDesc">商品描述</string>
    <string name="net_Succ_GoodsDetail">商品详情</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>