<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Net.NetSuccFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/logtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/net_Succ_Title"
            android:textColor="@color/purple_500"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/goodRangeMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/net_Succ_GoodsIdRangeFrontMes"
            android:textColor="@color/purple_500"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/logtitle" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputGoodID"
            android:layout_width="297dp"
            android:layout_height="71dp"
            android:hint="@string/net_Succ_GoodsId"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toStartOf="@+id/searchcommit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/goodRangeMessage"
            app:startIconDrawable="@drawable/search">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputGoodID_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/searchcommit"
            android:layout_width="109dp"
            android:layout_height="75dp"
            android:text="@string/net_Succ_GoodsSearch"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logtitle"
            app:layout_constraintVertical_bias="0.037" />

        <ImageView
            android:id="@+id/goodImg"
            android:layout_width="300dp"
            android:layout_height="301dp"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputGoodID"
            tools:src="@tools:sample/avatars" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/goodImg">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/net_Succ_GoodsName"
                    app:startIconDrawable="@drawable/yanxuan_selected">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/goodName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/net_Succ_GoodsType"
                    app:startIconDrawable="@drawable/leimupinleifenleileibie2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/goodType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/net_Succ_GoodsPrice"
                    app:startIconDrawable="@drawable/jiage">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/goodPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/net_Succ_GoodsNum"
                    app:startIconDrawable="@drawable/kucun">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/goodNum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/net_Succ_GoodsDesc"
                app:startIconDrawable="@drawable/miaoshu">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/goodDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/net_Succ_GoodsDetail"
                app:startIconDrawable="@drawable/xiangqing">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/goodDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>