<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Mes.MesFragment">

    <!-- TODO: Update blank fragment layout -->
    <!--    <TextView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:text="@string/hello_blank_fragment" />-->
    <!--    <TextView-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/cttText" />-->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <!--        <LinearLayout-->
        <!--            android:layout_width="fill_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:addStatesFromChildren="true" >-->
        <!--            <TextView-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:text="姓名"-->
        <!--                android:textColor="?android:attr/textColorSecondary" />-->
        <!--            <EditText-->
        <!--                android:id="@+id/et_name"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_weight="1"-->
        <!--                android:singleLine="true" />-->
        <!--        </LinearLayout>-->

        <!--        <LinearLayout-->
        <!--            android:layout_width="fill_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:addStatesFromChildren="true" >-->
        <!--            <TextView-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:text="年龄"-->
        <!--                android:textColor="?android:attr/textColorSecondary" />-->
        <!--            <EditText-->
        <!--                android:id="@+id/et_tel"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_weight="1"-->
        <!--                android:singleLine="true" />-->
        <!--        </LinearLayout>-->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="姓名"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="clear_text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="电话"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:addStatesFromChildren="true"
            android:gravity="center">

            <Button
                android:id="@+id/bt_add"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:text="@string/ctt_add" />

            <Button
                android:id="@+id/bt_modify"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:text="@string/ctt_edit" />

            <Button
                android:id="@+id/bt_del"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:text="@string/ctt_del" />
            <!--  <Button
                 android:id="@+id/bt_query"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/ctt_quary"
                 android:onClick="querybutton" >
             </Button> -->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:bottom="1dp"
            android:top="1dp">
            <TextView
                android:layout_width="68dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ctt_num"
                android:textSize="25sp"
                android:textStyle="bold"
                android:background="@color/gray_200"/>

            <TextView
                android:layout_width="129dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ctt_name"
                android:textSize="25sp"
                android:textStyle="bold"
                android:background="@color/gray_200"/>

            <TextView
                android:layout_width="211dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ctt_tel"
                android:textSize="25sp"
                android:textStyle="bold"
                android:background="@color/gray_200"/>
        </LinearLayout>


        <ListView
            android:id="@+id/listView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/ctt_list_background">
        </ListView>
    </LinearLayout>

</FrameLayout>